--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.1.1",
+    "angular-d3-charts": "^5.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular-image-slider": "0.0.8",
     "bootstrap": "^4.1.1",
     "core-js": "2.5.5",
+    "d3": "^5.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng-simple-slideshow": "^1.2.2",
+    "ng2-charts": "^1.6.0",
+    "ng4-charts": "^1.0.2",
     "ngx-slider": "0.0.5",
     "ngx-smart-modal": "^6.0.3",
     "rxjs": "6.1.0",
+    "underscore": "^1.9.1",
     "zone.js": "0.8.26"
   },
   "version": "0.0.0",
