beore navbar changes

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@angular/core": "6.0.0",
     "@angular/forms": "6.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^6.3.2",
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
@@ -16,6 +17,7 @@
     "angular-d3-charts": "^5.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular-image-slider": "0.0.8",
+    "angular-material": "^1.1.10",
     "bootstrap": "^4.1.1",
     "core-js": "2.5.5",
     "d3": "^5.5.0",
