balance page with sorting colum option

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.1.1",
+    "angular-2-data-table": "^0.1.2",
     "angular-d3-charts": "^5.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular-image-slider": "0.0.8",
@@ -26,6 +27,7 @@
     "ng-simple-slideshow": "^1.2.2",
     "ng2-charts": "^1.6.0",
     "ng4-charts": "^1.0.2",
+    "ngx-order-pipe": "^2.0.1",
     "ngx-slider": "0.0.5",
     "ngx-smart-modal": "^6.0.3",
     "rxjs": "6.1.0",
