--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.3.1",
     "ng-simple-slideshow": "^1.2.2",
     "ng2-charts": "^1.6.0",
+    "ng2-search-filter": "^0.4.7",
     "ng4-charts": "^1.0.2",
     "ngx-order-pipe": "^2.0.1",
     "ngx-slider": "0.0.5",
